sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/Inventory_Item_BOM__c.object-meta.xml
<CustomObject>
    <label>Inventory Item BOM</label>
    <nameField>
        <displayFormat>BOM-{0000}</displayFormat>
        <label>BOM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Item BOM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>