sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/fields/BOM_Factor__c.field-meta.xml
<CustomField>
    <fullName>BOM_Factor__c</fullName>
    <label>BOM Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linear</fullName>
                <default>true</default>
                <label>Linear</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>