sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/fields/BOM_Item__c.field-meta.xml
<CustomField>
    <fullName>BOM_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BOM Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Item BOM (BOM Item)</relationshipLabel>
    <relationshipName>Inventory_BOM_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>