sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/fields/BoM_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>BoM_Item_Cost__c</fullName>
    <formula>BOM_Item__r.unit_cost__c *  Quantity_Per__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BoM Item Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>