sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/fields/Inventory_Item_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item Location</label>
    <referenceTo>Inventory_Item_Location__c</referenceTo>
    <relationshipLabel>Inventory Item BOM</relationshipLabel>
    <relationshipName>Inventory_Item_BOM</relationshipName>
    <type>Lookup</type>
</CustomField>