sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/fields/Item_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Cost__c</fullName>
    <formula>BOM_Item__r.unit_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Unit Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>