sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/fields/Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Item__c</fullName>
    <label>Parent Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Item BOM</relationshipLabel>
    <relationshipName>Inventory_Item_BOM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>