sfSandBoxCode/force-app/main/default/objects/Inventory_Item_BOM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BOM_Factor__c</columns>
    <columns>BOM_Item__c</columns>
    <columns>Parent_Item__c</columns>
    <columns>Quantity_Per__c</columns>
    <columns>BoM_Item_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>